src/components/Table/hoc/withTableSelection/withTableSelection.scss
@use '../../variables';

#{variables.$block} {
    &__checkbox_cell {
        position: relative;
        min-width: 17px;
    }

    &__selection-checkbox {
        padding: inherit;
        border-bottom: none;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }

    &__row_selected {
        background: var(--g-color-base-selection);

        #{variables.$block}__cell_sticky_left,
        #{variables.$block}__cell_sticky_right {
            background: linear-gradient(
                    to right,
                    var(--g-color-base-selection),
                    var(--g-color-base-selection)
                ),
                linear-gradient(
                    to right,
                    var(--g-color-base-background),
                    var(--g-color-base-background)
                );
        }

        &#{variables.$block}__row_interactive:hover {
            background: var(--g-color-base-selection-hover);

            #{variables.$block}__cell_sticky_left,
            #{variables.$block}__cell_sticky_right {
                background: linear-gradient(
                        to right,
                        var(--g-color-base-selection-hover),
                        var(--g-color-base-selection-hover)
                    ),
                    linear-gradient(
                        to right,
                        var(--g-color-base-background),
                        var(--g-color-base-background)
                    );
            }
        }
    }
}

